@@ -183,6 +183,7 @@ In alphabetical order (by last name)
 ** Patches for Emacs
 ** Handling of Interrupt
 * Antti Tarvainen
+** Patch [#14183] Tiny improvement on mock_spec.rb
 ** Patch [#14208] Fix to Mock#method_missing raising NameErrors instead of MockExpectationErrors
 ** Patch [#14255] Fixed examples in mock_spec.rb and shared_behaviour_spec.rb
 ** Patch [#14156] False positives with should_not
